fix: Tweak vertical spacing between components

--- a/src/scss/ArticleCarousel.scss
+++ b/src/scss/ArticleCarousel.scss
@@ -9,6 +9,7 @@
 
 @media screen {
 	.ArticleCarousel {
+		margin-bottom: between_cols(40, 130);
 	}
 
 	.ArticleCarousel__title {
