--- a/src/scss/SearchResults.scss
+++ b/src/scss/SearchResults.scss
@@ -28,7 +28,6 @@
 	.SearchResults {
 		position: relative;
 		margin-left: auto;
-		padding-top: grid-units(2);
 	}
 
 	.SearchResults--loading {
