--- a/src/scss/SiteSearchInput.scss
+++ b/src/scss/SiteSearchInput.scss
@@ -6,6 +6,7 @@
 
 @media screen {
 	.SiteSearchInput {
+		margin-bottom: grid-units(7);
 		// Changes as evident in the "Frontpage" Figma document
 		// --input-border-color: #{$color-suld-75};
 		// --input-border-radius: 0;
